--- a/trunk/sandbox/Zaboom/Zaboom/Zaboom.csproj
+++ b/trunk/sandbox/Zaboom/Zaboom/Zaboom.csproj
@@ -47,12 +47,6 @@
     <Compile Include="RenameAssetDialog.Designer.cs">
       <DependentUpon>RenameAssetDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="OutputDeviceDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,10 +59,6 @@
       <DependentUpon>RenameAssetDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="OutputDeviceDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>OutputDeviceDialog.cs</DependentUpon>
@@ -76,6 +66,10 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ZaboomForm.resx">
+      <DependentUpon>ZaboomForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -91,6 +85,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="ZaboomForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ZaboomForm.Designer.cs">
+      <DependentUpon>ZaboomForm.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
