--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Dialogs\NewProject.Designer.cs">
       <DependentUpon>NewProject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\Play.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\Play.Designer.cs">
+      <DependentUpon>Play.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\Preferences.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,10 @@
     <EmbeddedResource Include="Dialogs\NewProject.resx">
       <SubType>Designer</SubType>
       <DependentUpon>NewProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\Play.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Play.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\Preferences.resx">
       <SubType>Designer</SubType>
