--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -62,16 +62,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
     </Reference>
-    <Reference Include="UrakawaApplicationBackend, Version=1.0.2368.31351, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\UrakawaApplicationBackend\obj\Debug\UrakawaApplicationBackend.dll</HintPath>
-    </Reference>
     <Reference Include="VirtualAudioBackend, Version=1.0.2399.28607, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\VirtualAudioBackend\bin\Debug\VirtualAudioBackend.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetProperty.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
     <Compile Include="Commands\TOC\DeleteSection.cs" />
