--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -236,6 +236,7 @@
     </Compile>
     <Compile Include="UserProfile.cs" />
     <Compile Include="Visitors\AssetVisitor.cs" />
+    <Compile Include="Visitors\PhraseEnumerator.cs" />
     <Compile Include="Visitors\UndeleteSubtree.cs" />
   </ItemGroup>
   <ItemGroup>
