--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Events\Strip\ImportAssetEventArgs.cs" />
     <Compile Include="Events\Strip\SelectedEventArgs.cs" />
     <Compile Include="Events\Node\AddedSectionNodeEventArgs.cs" />
+    <Compile Include="IOUtils.cs" />
     <Compile Include="Localizer.cs" />
     <Compile Include="messages.Designer.cs">
       <AutoGen>True</AutoGen>
