--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Commands\ConsCommand.cs" />
     <Compile Include="Commands\Strips\AddPhrase.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
+    <Compile Include="Commands\TOC\DecreaseSectionLevel.cs" />
     <Compile Include="Commands\TOC\DeleteSection.cs" />
     <Compile Include="Commands\TOC\IncreaseSectionLevel.cs" />
     <Compile Include="Commands\TOC\MoveSectionDown.cs" />
