--- a/trunk/prototype/Zaboom/Zaboom/Zaboom.csproj
+++ b/trunk/prototype/Zaboom/Zaboom/Zaboom.csproj
@@ -44,12 +44,6 @@
     <Compile Include="Audio\AudioDevice.cs" />
     <Compile Include="Audio\Player.cs" />
     <Compile Include="Commands.cs" />
-    <Compile Include="DummyBlock.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="DummyBlock.Designer.cs">
-      <DependentUpon>DummyBlock.cs</DependentUpon>
-    </Compile>
     <Compile Include="NewProjectDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,10 +75,16 @@
     <Compile Include="UserControls\AudioBlock.Designer.cs">
       <DependentUpon>AudioBlock.cs</DependentUpon>
     </Compile>
-    <Compile Include="WaveformPanel.cs">
+    <Compile Include="UserControls\DummyBlock.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="WaveformPanel.Designer.cs">
+    <Compile Include="UserControls\DummyBlock.Designer.cs">
+      <DependentUpon>DummyBlock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\WaveformPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\WaveformPanel.designer.cs">
       <DependentUpon>WaveformPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="ZaboomForm.cs">
@@ -95,10 +95,6 @@
     </Compile>
     <Compile Include="Zaboom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DummyBlock.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>DummyBlock.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="NewProjectDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>NewProjectDialog.cs</DependentUpon>
@@ -119,9 +115,13 @@
       <SubType>Designer</SubType>
       <DependentUpon>AudioBlock.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="WaveformPanel.resx">
+    <EmbeddedResource Include="UserControls\DummyBlock.resx">
       <SubType>Designer</SubType>
+      <DependentUpon>DummyBlock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\WaveformPanel.resx">
       <DependentUpon>WaveformPanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ZaboomForm.resx">
       <SubType>Designer</SubType>
